--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -1,4 +1,4 @@
-{%load staticfiles%}
+{%load static%}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="{%static 'css/base.css'%}"  type="text/css">
+    <link href="{%static 'css/base.8c2241e42905.css'%}"  type="text/css">
     {%block css%}{%endblock%}
 </head>
 <body>
