needed rel-stylesheet

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -3,7 +3,7 @@
 {%load custom_tags%}
 {%block css%}
 
-<link  href="{%static 'css/home.css'%}"  type="text/css"> 
+<link  rel="stylesheet" href="{%static 'css/home.css'%}"  type="text/css"> 
 {%endblock%}
 
 {%block content%}
